Convert all docstrings to Doxygen format

--- a/docs/latex/refman.tex
+++ b/docs/latex/refman.tex
@@ -232,13 +232,10 @@
   % re-enable anchors again
   \hypersetup{pageanchor=true}
 %--- Begin generated contents ---
-\chapter{Class Index}
-\input{annotated}
 \chapter{File Index}
 \input{files}
-\chapter{Class Documentation}
-\input{structmisc__generic__node}
 \chapter{File Documentation}
+\input{graph_8h_source}
 \input{htable_8h_source}
 \input{list_8h_source}
 \input{queue_8h_source}
