--- a/docs/latex/files.tex
+++ b/docs/latex/files.tex
@@ -1,5 +1,6 @@
 \doxysection{File List}
 Here is a list of all documented files with brief descriptions\+:\begin{DoxyCompactList}
+\item\contentsline{section}{/home/salvatroie/\+MISC/include/misc/\mbox{\hyperlink{graph_8h_source}{graph.\+h}} }{\pageref{graph_8h_source}}{}
 \item\contentsline{section}{/home/salvatroie/\+MISC/include/misc/\mbox{\hyperlink{htable_8h_source}{htable.\+h}} }{\pageref{htable_8h_source}}{}
 \item\contentsline{section}{/home/salvatroie/\+MISC/include/misc/\mbox{\hyperlink{list_8h_source}{list.\+h}} }{\pageref{list_8h_source}}{}
 \item\contentsline{section}{/home/salvatroie/\+MISC/include/misc/\mbox{\hyperlink{queue_8h_source}{queue.\+h}} }{\pageref{queue_8h_source}}{}
